video autoplay fix i hope and spacing for mobile menu

--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -175,7 +175,8 @@
 	.navbar-lower {
 		display: flex;
 		flex-direction: column;
-		height: auto;
+		height: 100%;
+		max-height: 100%;
 		padding: 0;
 		background-color: transparent;
 		justify-content: center;
@@ -185,7 +186,7 @@
 	.navbarmobilecontainer {
 		/* padding: 1rem; */
 		z-index: 999;
-		max-height: 80vh;
+		height: 100%;
 		justify-content: flex-start;
 		align-items: center;
 	}
@@ -194,9 +195,11 @@
 	.navbarmobilecontainer .navmenu {
 		display: flex;
 		flex-direction: column;
-		gap: 4rem;
+		height: 100%;
+
+		gap: 0;
 		align-items: flex-start;
-		justify-content: center;
+		justify-content: space-evenly;
 		/* margin: 1rem; */
 	}
 
